fix token truncation to occupy table cell width

--- a/frontend/src/components/TokensList/components/TokensTable/_TokensTable.scss
+++ b/frontend/src/components/TokensList/components/TokensTable/_TokensTable.scss
@@ -46,7 +46,6 @@
     }
 
     .token-text {
-      max-width: 80%;
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
